changes in pricing page
changes in pricing page

--- a/es/precios.html
+++ b/es/precios.html
@@ -289,8 +289,9 @@
                     </li>-->
                     <li>
                       <div class="prod_feature_box">
+                          <span class="plan_tag">Growth</span>
                         <figure>
-                          <img src="../images/roles.png" alt="Administrador de Roles">
+                          <img src="../images/rolesb-b.png" alt="Administrador de Roles">
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Roles</h4>
@@ -325,63 +326,6 @@
                     </li>
                   </ul>
                 </div>
-                <!--<div class="prod_feature_block prod_feature_block_3nd">
-                  <ul>
-                    <li>
-                      <div class="prod_feature_box">
-                        <span class="plan_tag">Enterprise</span>
-                        <figure>
-
-                          <img src="images/apib-w.png" alt="">
-                        </figure>
-                        <div class="prod_feature_box_text">
-                        <h4>API Access &</h4>
-                        <p> 99% SLA</p>
-                      </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="prod_feature_box">
-                        <span class="plan_tag">Enterprise</span>
-                        <figure>
-
-                          <img src="images/fully-personalized.png" alt="">
-                        </figure>
-                        <div class="prod_feature_box_text">
-                        <h4>Fully Personalized</h4>
-                        <p> Training</p>
-                      </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="prod_feature_box">
-                        <span class="plan_tag">Enterprise</span>
-                        <figure>
-
-                          <img src="images/advancedreportsb-w.png" alt="">
-                        </figure>
-                        <div class="prod_feature_box_text">
-                        <h4>Flexible & Advanced</h4>
-                        <p>Reports</p>
-                      </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="prod_feature_box">
-                        <span class="plan_tag">Enterprise</span>
-                        <figure>
-
-                          <img src="images/backupsb-w.png" alt="">
-                        </figure>
-                        <div class="prod_feature_box_text">
-                        <h4>Backups</h4>
-                        <p> Data Recovery</p>
-                      </div>
-                      </div>
-                    </li>
-
-                  </ul>
-                </div>-->
               </div>
             </div>
             <div class="slide">
@@ -391,119 +335,118 @@
                     <li>
                       <div class="prod_feature_box">
                         <figure>
-                          <img src="../images/gsuite.png" alt="G suite integration">
+                          <img src="../images/gsuite.png" alt="G-suite">
                         </figure>
                         <div class="prod_feature_box_text">
-                        <h4>G Suite</h4>
-                        <p>Archivos, Calendario y más</p>
+                          <h4>G Suite</h4>
+                          <p>Archivos, Calendario y más</p>
+                        </div>
+                      </div>
+                    </li>
+                      <li>
+                      <div class="prod_feature_box">
+                        <figure>
+                          <img src="../images/kanban-color.png" alt="Kanban view">
+                        </figure>
+                        <div class="prod_feature_box_text">
+                         <h4>Vista Kanban</h4>
+                        <p>Organización flexible de archivos</p>
                       </div>
                       </div>
                     </li>
-                       <!--<li>
+                      <li>
                       <div class="prod_feature_box">
                         <figure>
-                          <img src="../images/templates.png" alt="project templates">
+                          <img src="../images/list-color.png" alt="image list">
                         </figure>
                         <div class="prod_feature_box_text">
-                        <h4>Plantillas de Proyecto</h4>
-                        <p> Para cada tipo de equipo</p>
+                        <h4>View lista</h4>
+                        <p>Checklist clasico</p>
                       </div>
                       </div>
-                    </li>-->
+                    </li>
+                    <li>
+                      <div class="prod_feature_box">
+                        <figure>
+                          <img src="../images/conversation-color.png" alt="conversation app">
+                        </figure>
+                        <div class="prod_feature_box_text">
+                        <h4>Conversaciones</h4>
+                      </div>
+                      </div>
+                    </li>      
+                    <li>
+                      <div class="prod_feature_box">
+                        <figure>
+
+                          <img src="../images/filters-color.png" alt="Advance filters">
+                        </figure>
+                        <div class="prod_feature_box_text">
+                        <h4>Filtros avanzados</h4>
+                        <p>Información refinada</p>
+                      </div>
+                      </div>
+                    </li>  
+                  </ul>
+                </div>
+                <div class="prod_feature_block prod_feature_block_2nd">
+                  <ul>
+                    <li>
+                      <div class="prod_feature_box">
+                        <figure>
+                          <img src="../images/Drive-color.png" alt="Google Drive">
+                        </figure>
+                        <div class="prod_feature_box_text">
+                        <h4>Drive</h4>
+                        <p>Archivos de proyecto centralizados</p>
+                        </div>
+                      </div>
+                    </li>
+                      <li>
+                      <div class="prod_feature_box">
+                        <figure>
+                          <img src="../images/calendar-b.png" alt="Calendar integration">
+                        </figure>
+                        <div class="prod_feature_box_text">
+                        <h4>Integración con Calendar</h4>
+                      </div>
+                      </div>
+                    </li>
                       <li>
                       <div class="prod_feature_box">
                         <figure>
                           <img src="../images/multipleteams.png" alt="multiple teams">
                         </figure>
                         <div class="prod_feature_box_text">
-                        <h4>Múltiples Equipos</h4>
-                        <p>Trabajo colaborativo y estructurado</p>    
+                        <h4>Multiples equipos</h4>
+                        <p>Trabajo colaborativo y estructurado</p>
+                        </div>
                       </div>
+                    </li>
+                    <li>
+                      <div class="prod_feature_box">
+                        <figure>
+                          <img src="../images/domain-color.png" alt="domain color">
+                        </figure>
+                        <div class="prod_feature_box_text">
+                        <h4>Multiples dominios</h4>
+                        <p> Colaboración entre compañías</p>
+                        </div>
                       </div>
                     </li>
                      <li>
                       <div class="prod_feature_box">
                         <figure>
-                          <img src="../images/roles.png" alt="admin role">
+                          <img src="../images/support.png" alt="Live support">
                         </figure>
                         <div class="prod_feature_box_text">
-                        <h4>Roles</h4>
-                        <p>Control de permisos</p>  
-                      </div>
-
-                      </div>
-                    </li>
-                    <li>
-                      <div class="prod_feature_box">
-                        <figure>
-                          <img src="../images/support.png" alt="support and assistance">
-                        </figure>
-                        <div class="prod_feature_box_text">
-                        <h4>Soporte</h4>
+                        <h4>Soporte prioritario</h4>
                         <p>Información y asistencia</p>
                       </div>
                       </div>
-                    </li>
+                    </li>  
                   </ul>
                 </div>
-                <!--<div class="prod_feature_block prod_feature_block_3nd">
-                  <ul>
-                    <li>
-                      <div class="prod_feature_box">
-                        <span class="plan_tag">Enterprise</span>
-
-                        <figure>
-
-                          <img src="images/apib-w.png" alt="">
-                        </figure>
-                        <div class="prod_feature_box_text">
-                        <h4>API Access &</h4>
-                        <p> 99% SLA</p>
-                      </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="prod_feature_box">
-                        <span class="plan_tag">Enterprise</span>
-                        <figure>
-
-                          <img src="images/fully-personalized.png" alt="">
-                        </figure>
-                        <div class="prod_feature_box_text">
-                        <h4>Fully Personalized</h4>
-                        <p> Training</p>
-                      </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="prod_feature_box">
-                        <span class="plan_tag">Enterprise</span>
-                        <figure>
-
-                          <img src="images/advancedreportsb-w.png" alt="">
-                        </figure>
-                        <div class="prod_feature_box_text">
-                        <h4>Flexible & Advanced</h4>
-                        <p>Reports</p>
-                      </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="prod_feature_box">
-                         <span class="plan_tag">Enterprise</span>
-                        <figure>
-
-                          <img src="images/backupsb-w.png" alt="">
-                        </figure>
-                        <div class="prod_feature_box_text">
-                        <h4>Backups</h4>
-                        <p> Data Recovery</p>
-                      </div>
-                      </div>
-                    </li>
-
-                  </ul>
-                </div>-->
               </div>
             </div>
             <div class="slide">
@@ -687,123 +630,6 @@
 
   </div>
 </div>
-
-<!-- No ready
-<div class="between_you_us common_gap">
-  <div class="container">
-      <div class="section_title">
-        <h2>Between you and us <i class="heart_im"><img src="../images/heart_im.png" alt=""></i></h2>
-      </div>
-      <div class="between_you_us_top">
-        <div class="between_you_us_tab" id="range_content1">
-          <div class="row">
-            <div class="col-md-6 between_you_us_img">
-              <img src="../images/call_discovery_im.jpg" alt="">
-            </div>
-            <div class="col-md-6 between_you_us_rt">
-              <h3>Discovery Call</h3>
-              <p>We understand your needs!</p>
-            </div>
-          </div>
-        </div>
-        <div class="between_you_us_tab" id="range_content2" style="display: none;">
-          <div class="row">
-            <div class="col-md-6 between_you_us_img">
-              <img src="../images/call_discovery_im1.jpg" alt="">
-            </div>
-            <div class="col-md-6 between_you_us_rt">
-              <h3>Core Team Meeting</h3>
-              <p>We understand your needs!</p>
-            </div>
-          </div>
-        </div>
-        <div class="between_you_us_tab" id="range_content3" style="display: none;">
-          <div class="row">
-            <div class="col-md-6 between_you_us_img">
-              <img src="../images/call_discovery_im2.jpg" alt="">
-            </div>
-            <div class="col-md-6 between_you_us_rt">
-              <h3>Team Training</h3>
-              <p>We understand your needs!</p>
-            </div>
-          </div>
-        </div>
-        <div class="between_you_us_tab" id="range_content4" style="display: none;">
-          <div class="row">
-            <div class="col-md-6 between_you_us_img">
-              <img src="../images/call_discovery_im3.jpg" alt="">
-            </div>
-            <div class="col-md-6 between_you_us_rt">
-              <h3>Follow up</h3>
-              <p>We understand your needs!</p>
-            </div>
-          </div>
-        </div>
-
-
-      </div>
-      <div class="range_slider">
-        <input type="text" id="rangetab">
-        <div class="range_slider_label">
-          <ul>
-            <li>Discovery Call</li>
-            <li>Core Team <br>Meeting</li>
-            <li>Team Training</li>
-            <li>Follow up</li>
-          </ul>
-        </div>
-    </div>
-
-
-  </div>
-</div>
--->
-
-  <div class="marketplace_sec blue_wavebg1">
-    <div class="container">
-      <div class="marketplace_sec_in">
-
-      <div class="row">
-        <div class="col-md-6">
-          <div class="marketplace_video wistia_responsive_wrapper">
-            <!-- <img src="../images/market_place_video.jpg" alt=""> -->
-            <span class="wistia_embed wistia_async_anuee2yism popover=true popoverAnimateThumbnail=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span>
-            <!-- <a href="#url" class="marketplace_video_btn"><img src="../images/play-button.svg" alt=""></a> -->
-          </div>
-        </div>
-
-        <div class="col-md-6">
-          <div class="marketplace_rt_content">
-            <span class="marketplace_tag">
-              <img src="../images/group-9.png" alt="">
-              Google Marketplace
-            </span>
-            <h4 class="title_txt">#1 en el Marketplace de Google</h4>
-            <span class="chk_review"><a href="https://gsuite.google.com/marketplace/app/workep/191121176373">Lee los comentarios</a></span>
-            <div class="clientreview_text">
-              <p>Workep es la solución ideal para gestión de proyectos. Si estas en G-suite definitivamente está por encima de las demás. La integración nativa con toda la suite ayuda bastante.</p>
-            </div>
-            <div class="client_proftxt">
-              <span class="client_profLft">
-                <img src="../images/profile_im1.jpg" alt="">
-              </span>
-              <span class="client_profrt">
-                <span class="client_ratings">
-                  <img src="../images/star.png" alt="">
-                </span>
-                <span class="client_name">Alex Arango</span>
-                <span class="client_desig">CEO Triario</span>
-              </span>
-
-            </div>
-
-            <a href="https://app.workep.com/login" class="free_trialbtn">Empieza tu prueba gratuita de 15 días</a>
-          </div>
-        </div>
-      </div>
-      </div>
-    </div>
-  </div>
 
   <div class="lovedby_thousand common_gap">
     <h3 class="lovedby_thousand_title"><i class="heart_im"><img src="../images/heart_im.png" alt=""></i>Amado por miles de empresas</h3>
