--- a/pricing.html
+++ b/pricing.html
@@ -297,8 +297,9 @@
                     </li> 
                     <li>
                       <div class="prod_feature_box">
+                          <span class="plan_tag">Growth</span>
                         <figure>
-                          <img src="images/roles.png" alt="Workep roles">
+                          <img src="images/rolesb-b.png" alt="Workep roles">
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Roles</h4>
@@ -475,18 +476,7 @@
                         <p>Information and assistance</p>
                       </div>
                       </div>
-                    </li> 
-                    <li>
-                      <div class="prod_feature_box">
-                        <figure>
-                          <img src="images/roles.png" alt="Workep roles">
-                        </figure>
-                        <div class="prod_feature_box_text">
-                        <h4>Roles</h4>
-                        <p>Permissions management</p>       
-                      </div>
-                      </div>
-                    </li> 
+                    </li>  
                   </ul>
                 </div>
               </div>
@@ -625,9 +615,7 @@
                     </li>
                     <li>
                       <div class="prod_feature_box">
-                        <span class="plan_tag">Growth</span>
                         <figure>
-
                           <img src="images/gantt.png" alt="diagrama de gantt">
                         </figure>
                         <div class="prod_feature_box_text">
