update image pricing page

--- a/es/precios.html
+++ b/es/precios.html
@@ -632,7 +632,7 @@
                     <li>
                       <div class="prod_feature_box">
                         <figure>
-                          <img src="../images/mileston-b&w.svg" alt="Identifica objetivos clave" width="150px">
+                          <img src="../images/mileston-color.svg" alt="Identifica objetivos clave" width="150px">
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Hitos</h4>
