--- a/made-for-google.html
+++ b/made-for-google.html
@@ -297,7 +297,7 @@
        <div class="section_title">
           <h2>Google Calendar <br>Integration and automation</h2>
           <div class="addon_img wow bounceInUp" data-wow-delay="0.3s" data-wow-duration="1s">
-            <img src="images/google_calender.png" alt="">
+            <img src="images/google_calender.png" alt="google Calendar">
           </div>
           <p>Easily sync your task due dates with the calendar you are already using. <br>Every project has its own Google Calendar, so you can better manage your time.</p>
         </div>
