--- a/workep-for-education.html
+++ b/workep-for-education.html
@@ -122,7 +122,7 @@ projects by providing a platform fully integrated with Google for Education.</p>
             <li>
               <div class="collaboration_person">
                 <span class="collaboration_person_title">#You</span>
-                <figure><img src="images/you.png" alt=""></figure>
+                <figure><img src="images/you.png" alt="User workep"></figure>
               </div>
             </li>
             <li>
@@ -134,7 +134,7 @@ projects by providing a platform fully integrated with Google for Education.</p>
             <li>
               <div class="collaboration_person">
                 <span class="collaboration_person_title">#YourClassmate</span>
-                <figure><img src="images/your_classmate.png" alt=""></figure>
+                <figure><img src="images/your_classmate.png" alt="Class mate workep"></figure>
               </div>
             </li>
           </ul>
@@ -360,7 +360,7 @@ projects by providing a platform fully integrated with Google for Education.</p>
                 </div>
                 <div class="flexiblity_testi_img">
                   <figure>
-                    <img src="images/peoplefaces/javier.jpeg" alt="">
+                    <img src="images/peoplefaces/javier.jpeg" alt="Javier user Workep">
                   </figure>
                 </div>
 
