--- a/download-apps.html
+++ b/download-apps.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Google indicator for language  -->
   <link rel="alternate" hreflang="en" href="https://workep.com/" />
-  <link rel="canonical" href="https://workep.com/downloadapps.html"/>
+  <link rel="canonical" href="https://workep.com/download-apps.html"/>
 
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
