--- a/product.html
+++ b/product.html
@@ -129,7 +129,7 @@ and fully integrated within G Suite.</p>
         <div class="startsec_in">
           <h3>Start</h3>
           <span class="robochar">
-            <img src="images/gen2.png" alt="" class="oscillation">
+            <img src="images/gen2.png" alt="Gen Robot Workep" class="oscillation">
             <svg viewBox="0 0 100 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
             <ellipse id="shadow" cx="50" cy="5" rx="30" ry="6" style="fill:#b2b2b2;"/>
             </svg>
@@ -687,7 +687,7 @@ their success, and adapt to issues to avoid major failures.</p>
                   <div class="col-md-4 wow fadeInUp" data-wow-delay="0.9s" data-wow-duration="1s">
                     <div class="anykind_team_bot_box">
                       <figure>
-                        <img src="images/caroline.png" alt="">
+                        <img src="images/caroline.png" alt="Caroline user">
                       </figure>
                       <div class="anykind_team_bot_box_txt">
                         <h4>Caroline Norton</h4>
