robots.txt update
robots.txt update

--- a/download-apps.html
+++ b/download-apps.html
@@ -196,7 +196,7 @@
         <div class="footlanguage">
          <div class="footlanguage_select">
             <select onchange="if (this.value) window.location.href=this.value">
-              <option value="https://workep.com/downloadapps.html" selected>English</option>
+              <option value="https://workep.com/download-apps.html" selected>English</option>
               <option value="https://workep.com/es/descargarapps.html">Español</option>
             </select>
          </div>
