--- a/es/hecho-para-google.html
+++ b/es/hecho-para-google.html
@@ -557,7 +557,7 @@
             <div class="footlanguage">
              <div class="footlanguage_select">
                 <select onchange="if (this.value) window.location.href=this.value">
-                  <option value="https://workep.com/madeforgoogle.html" selected>English</option>
+                  <option value="https://workep.com/made-for-google.html" selected>English</option>
                   <option value="https://workep.com/es/hecho-para-google.html">Español</option>
                 </select>
              </div>
