--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="madeforgoogle_banner_box">
              <p>With a single click you can turn the entire G Suite into a more powerful collaboration platform. Integrates Gmail, Drive, Calendar, Google docs, Hangouts, Contacts and Google Cloud. </p>
             </div>
-            <a href="https://workep.com/madeforgoogle.html" class="starttrial_btn">How does it work?</a>
+            <a href="https://workep.com/made-for-google.html" class="starttrial_btn">How does it work?</a>
           </div>
         </div>
       </div>
@@ -739,9 +739,9 @@
               <!-- <li><a href="https://workep.com/stories.html">Use cases </a></li> -->
               <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
-              <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
+              <li><a href="https://workep.com/made-for-google.html">Made for Google</a></li>
               <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
-              <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
+              <li><a href="https://workep.com/download-apps.html">Download Apps</a></li>
             </ul>
           </div>
           <div class="foot3">
