fix: include script on all pages

--- a/pricing.html
+++ b/pricing.html
@@ -233,7 +233,7 @@
                       </div>
                     </li>
                   </ul>
-                </div>  
+                </div>
                 <div class="prod_feature_block">
                   <ul>
                     <li>
@@ -246,7 +246,7 @@
                         <p>Centralized Project Files</p>
                         </div>
                       </div>
-                    </li>  
+                    </li>
                     <li>
                       <div class="prod_feature_box">
                         <figure>
@@ -265,10 +265,10 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Google Calendar</h4>
-                        <p>Turn your tasks into events</p>    
+                        <p>Turn your tasks into events</p>
                       </div>
                       </div>
-                    </li>        
+                    </li>
                     <li>
                       <div class="prod_feature_box">
                         <figure>
@@ -287,7 +287,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Gmail Extension</h4>
-                        <p>Turn emails into tasks</p>    
+                        <p>Turn emails into tasks</p>
                       </div>
                       </div>
                     </li>-->
@@ -376,7 +376,7 @@
                         <p>Mark specific points in time</p>
                       </div>
                       </div>
-                     </li>  
+                     </li>
                   </ul>
                 </div>
                 <div class="prod_feature_block prod_feature_block_2nd">
@@ -428,11 +428,11 @@
                         <p>Permissions management</p>
                       </div>
                       </div>
-                     </li>     
+                     </li>
                     </ul>
-                </div>    
+                </div>
               </div>
-            </div><!--features slide 0 -->  
+            </div><!--features slide 0 -->
             <div class="slide">
              <div class="prod_feature_content">
                 <div class="prod_feature_block prod_feature_block_2nd">
@@ -493,7 +493,7 @@
                       </div>
                     </li>
                   </ul>
-                </div>  
+                </div>
                 <div class="prod_feature_block">
                   <ul>
                     <li>
@@ -506,7 +506,7 @@
                         <p>Files, Calendar and more.</p>
                         </div>
                       </div>
-                    </li>  
+                    </li>
                     <li>
                       <div class="prod_feature_box">
                         <figure>
@@ -525,10 +525,10 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Google Calendar</h4>
-                        <p>Turn your tasks into events</p>    
+                        <p>Turn your tasks into events</p>
                       </div>
                       </div>
-                    </li>        
+                    </li>
                     <li>
                       <div class="prod_feature_box">
                         <figure>
@@ -547,16 +547,16 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Gmail Extension</h4>
-                        <p>Turn emails into tasks</p>    
+                        <p>Turn emails into tasks</p>
                       </div>
                       </div>
                     </li>-->
                   </ul>
-                </div>   
+                </div>
               </div>
             </div><!--features slide 1 -->
             <div class="slide">
-              <div class="prod_feature_content">  
+              <div class="prod_feature_content">
                 <div class="prod_feature_block prod_feature_block_2nd">
                   <ul>
                      <li>
@@ -635,7 +635,7 @@
                         <p>Idendify key goals</p>
                       </div>
                       </div>
-                     </li>  
+                     </li>
                   </ul>
                 </div>
                 <div class="prod_feature_block prod_feature_block_2nd">
@@ -683,9 +683,9 @@
                         <p>Permissions management</p>
                       </div>
                       </div>
-                     </li>     
+                     </li>
                     </ul>
-                </div>    
+                </div>
               </div>
             </div><!--features slide 2 -->
             </div>
@@ -961,6 +961,7 @@
 <script src="js/common.js"></script>
 <script src="https://fast.wistia.com/embed/medias/anuee2yism.jsonp" async></script>
 <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
+<script src="js/redirect.js?version=2"></script>
 
 
   </body>
