--- a/workep-for-education.html
+++ b/workep-for-education.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Workep For Education - Keep school work organized</title>    
+  <title>Workep For Education - Keep school work organized</title>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">    
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Enable collaboration in the classrom with Workep. Make it easier for students and teachers to work together in group projects by providing a platform">    
+  <meta name="description" content="Enable collaboration in the classrom with Workep. Make it easier for students and teachers to work together in group projects by providing a platform">
  <!-- FB Meta tags -->
   <meta property="og:title" content="Workep: Rebuilding the project management experience"/>
   <meta property="og:type" content="website"/>
@@ -18,7 +18,7 @@
   <meta name="twitter:title" content="Workep: Rebuilding the project management experience" />
   <meta name="twitter:description" content="A cross-enterprise collaboration tool that is fast, easy to use and fully integrated within G Suite" />
   <meta name="twitter:image" content="https://res.cloudinary.com/cegalvarez/image/upload/v1555274914/landingSocialImages/socialmediacover.jpg" />
-    
+
   <link rel="alternate" hreflang="en" href="https://workep.com/" />
   <link rel="canonical" href="https://workep.com/workep-for-education.html" />
   <link rel="author" href="https://workep.com" />
@@ -33,7 +33,7 @@
   <link rel="stylesheet" href="css/font-awesome.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="style.css">
- 
+
     <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -483,6 +483,8 @@ projects by providing a platform fully integrated with Google for Education.</p>
 <script src="js/wow.js"></script>
 <!-- <script src="js/jquery.malihu.PageScroll2id.js"></script> -->
 <script src="js/common.js"></script>
+<script src="js/redirect.js?version=2"></script>
+
 
 
 
