--- a/product.html
+++ b/product.html
@@ -1175,6 +1175,8 @@ their success, and adapt to issues to avoid major failures.</p>
 <script src="js/easy-responsive-tabs.js"></script>
 <script src="js/TweenMax.min.js"></script>
 <script src="js/common.js"></script>
+<script src="js/redirect.js?version=2"></script>
+
 
   </body>
 </html>
