--- a/es/es.html
+++ b/es/es.html
@@ -114,19 +114,19 @@
 
 <div class="index_banner">
   <div class="container index_banner_content">
-    <h1>Estamos todos juntos en esto! #covid-19</h1>
+    <h1>Estamos todos juntos en esto<br> #covid-19</h1>
     <p>La herramienta de colaboración remota entre empresas que es rápida, fácil de usar y totalmente integrada con G Suite</p>
     <div class="joinworkep_btns">
         <ul>
-          <li><a href="https://app.workep.com/login" class="signupgoogle"><span>REGÍSTRATE CON GOOGLE</span></a></li>
-          <li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>MARKETPLACE DE G SUITE<br>
+          <li><a href="https://app.workep.com/login" class="signupgoogle"><span>REGÍSTRATE GRATIS CON GOOGLE</span></a></li>
+          <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>MARKETPLACE DE G SUITE<br>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             </span>
-          </span></a></li>
+          </span></a></li>-->
         </ul>
       </div>
   </div>
@@ -159,7 +159,7 @@
             <div class="madeforgoogle_banner_box">
              <p>Con un solo clic puedes convertir toda la Suite de Google en una plataforma de colaboración más potente. Integra Gmail, Drive, Calendario, Google Docs, Hangouts, Contactos y Google Cloud.</p>
             </div>
-            <a href="https://workep.com/es/hecho-para-google.html" class="starttrial_btn">¿Cómo funciona?</a>
+            <a href="https://workep.com/es/hecho-para-google.html" class="starttrial_btn" style="padding-bottom: 15px; padding-top: 15px;">¿Cómo funciona?</a>
           </div>
         </div>
       </div>
@@ -570,7 +570,7 @@
 
               </div>
 
-              <a href="#url" class="free_trialbtn">Empieza tu prueba gratuita de 15 días</a>
+              <a href="https://app.workep.com/login" class="free_trialbtn">Regístrate gratis</a>
             </div>
           </div>
         </div>
