--- a/index.html
+++ b/index.html
@@ -117,15 +117,15 @@
     <p>A cross-enterprise collaboration tool that is fast, easy to use and fully integrated within G Suite.</p>
     <div class="joinworkep_btns">
         <ul>
-          <li><a href="https://app.workep.com/login" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a></li>
-          <li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>G SUITE MARKETPLACE <br>
+          <li><a href="https://app.workep.com/login" class="signupgoogle"><span>TRY FOR FREE WITH GOOGLE</span></a></li>
+          <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>G SUITE MARKETPLACE <br>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             </span>
-          </span></a></li>
+          </span></a></li>-->
         </ul>
       </div>
   </div>
@@ -569,7 +569,7 @@
 
               </div>
 
-              <a href="#url" class="free_trialbtn">Start your 15-day free trial</a>
+              <a href="https://app.workep.com/login" class="free_trialbtn">Try for free</a>
             </div>
           </div>
         </div>
@@ -706,14 +706,14 @@
       <div class="joinworkep_btns">
         <ul>
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a></li>
-          <li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>G SUITE MARKETPLACE <br>
+          <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>G SUITE MARKETPLACE <br>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             </span>
-          </span></a></li>
+          </span></a></li>-->
         </ul>
       </div>
     </div>
