update broken link
udate broken links in the landing pages.

--- a/es/hecho-para-google.html
+++ b/es/hecho-para-google.html
@@ -116,15 +116,15 @@
         </div>
          <div class="joinworkep_btns">
             <ul>
-              <li><a href="#url" class="signupgoogle"><span>REGÍSTRATE CON GOOGLE</span></a></li>
-              <li><a href="#url" class="g_suitbtn"><span>MARKETPLACE DE G SUITE<br>
+              <li><a href="https://app.workep.com/login" class="signupgoogle"><span>REGÍSTRATE CON GOOGLE</span></a></li>
+              <!--<li><a href="#url" class="g_suitbtn"><span>MARKETPLACE DE G SUITE<br>
                 <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
                 <i class="fa fa-star" aria-hidden="true"></i>
                 <i class="fa fa-star" aria-hidden="true"></i>
                 <i class="fa fa-star" aria-hidden="true"></i>
                 <i class="fa fa-star" aria-hidden="true"></i>
                 </span>
-              </span></a></li>
+              </span></a></li>-->
             </ul>
         </div>
       </div>
@@ -479,14 +479,14 @@
       <div class="joinworkep_btns">
         <ul>
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>REGÍSTRATE CON GOOGLE</span></a></li>
-          <li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>MARKETPLACE DE G SUITE<br/>
+          <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>MARKETPLACE DE G SUITE<br/>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             </span>
-          </span></a></li>
+          </span></a></li>-->
         </ul>
       </div>
     </div>
