--- a/es/producto.html
+++ b/es/producto.html
@@ -113,14 +113,14 @@ y totalmente integrado dentro de G Suite.</p>
       <div class="joinworkep_btns">
         <ul>
           <li><a href="#url" class="signupgoogle"><span>REGÍSTRATE CON GOOGLE</span></a></li>
-          <li><a href="#url" class="g_suitbtn"><span>MARKETPLACE DE G SUITE<br>
+          <!--<li><a href="#url" class="g_suitbtn"><span>MARKETPLACE DE G SUITE<br>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             </span>
-          </span></a></li>
+          </span></a></li>-->
         </ul>
       </div>
 
@@ -999,7 +999,7 @@ hitos específicos.</P>
         <h4>SOLICITA UNA DEMO</h4>
         <h3>¡EMPIEZA HOY!</h3>
         <p>Echa un vistazo dentro de Workep para descubrir <br> todo lo que puede hacer por ti.</p>
-        <a href="https://projectmanagement.workep.com/request-demo" class="starttrial_btn">Obtén una demo</a>
+        <a href="https://projectmanagement.workep.com/request-demo" class="starttrial_btn">Obtén una Demo</a>
       </div>
 
     </div>
@@ -1061,14 +1061,14 @@ hitos específicos.</P>
       <div class="joinworkep_btns">
         <ul>
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>REGÍSTRATE CON GOOGLE</span></a></li>
-          <li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>MARKETPLACE DE G SUITE <br>
+          <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>MARKETPLACE DE G SUITE <br>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             </span>
-          </span></a></li>
+          </span></a></li>-->
         </ul>
       </div>
     </div>
