--- a/es/precios.html
+++ b/es/precios.html
@@ -122,7 +122,7 @@
       <div class="col-md-6">
         <h1 style="font-size:48px"><strong>Encuentra el plan<br>ideal para ti</strong></h1>  
         <p>Lo mantenemos simple y asequible. Lo que ves es<br>lo que obtienes - no creemos en precios ocultos.</p>
-        <a href="https://app.workep.com/login" class="starttrial_btn">Empieza tu prueba gratuita de 15 días</a>
+        <a href="https://app.workep.com/login" class="starttrial_btn">Regístrate Gratis con Gooogle</a>
       </div>
     </div>
   </div>
@@ -847,14 +847,14 @@
       <div class="joinworkep_btns">
         <ul>
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>REGÍSTRATE CON GOOGLE</span></a></li>
-          <li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>MARKETPLACE DE G SUITE<br>
+          <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>MARKETPLACE DE G SUITE<br>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             </span>
-          </span></a></li>
+          </span></a></li>-->
         </ul>
       </div>
     </div>
