--- a/made-for-google.html
+++ b/made-for-google.html
@@ -114,14 +114,14 @@
          <div class="joinworkep_btns">
             <ul>
               <li><a href="https://app.workep.com/login" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a></li>
-              <li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>G SUITE MARKETPLACE <br>
+              <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>G SUITE MARKETPLACE <br>
                 <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
                 <i class="fa fa-star" aria-hidden="true"></i>
                 <i class="fa fa-star" aria-hidden="true"></i>
                 <i class="fa fa-star" aria-hidden="true"></i>
                 <i class="fa fa-star" aria-hidden="true"></i>
                 </span>
-              </span></a></li>
+              </span></a></li>-->
             </ul>
         </div>
       </div>
@@ -142,7 +142,7 @@
     <div class="missing_half_gsuit_bot">
       <div class="missing_half_gsuit_im">
         <img src="images/gsuit_missing_hlf_im.png" alt="points">
-        <a href="#url" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a>
+        <a href="https://app.workep.com/login" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a>
       </div>
       <div class="missing_half_gsuit_ic1 wow swing" data-wow-delay="1s" data-wow-duration="2s">
         <img src="images/sinup_ic1.png" alt="e-mail">
@@ -452,14 +452,14 @@
       <div class="joinworkep_btns">
         <ul>
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a></li>
-          <li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>G SUITE MARKETPLACE <br/>
+          <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>G SUITE MARKETPLACE <br/>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             </span>
-          </span></a></li>
+          </span></a></li>-->
         </ul>
       </div>
     </div>
