--- a/pricing.html
+++ b/pricing.html
@@ -119,7 +119,7 @@
       <div class="col-md-6">
           <h1 style="font-size:48px"><strong>Find the right Workep <br> plan for you!</strong></h1>
         <p>We keep it simple and affordable. What you see <br> is what you get— we don’t believe in hidden<br> fees.</p>
-        <a href="https://app.workep.com/login" class="starttrial_btn">Start your 15 days free trial</a>
+        <a href="https://app.workep.com/login" class="starttrial_btn">TRY FOR FREE WITH GOOGLE</a>
       </div>
     </div>
   </div>
@@ -844,14 +844,14 @@
       <div class="joinworkep_btns">
         <ul>
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a></li>
-          <li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>G SUITE MARKETPLACE <br>
+          <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>G SUITE MARKETPLACE <br>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             </span>
-          </span></a></li>
+          </span></a></li>-->
         </ul>
       </div>
     </div>
